--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@
   font-family: "Instagram Sans", sans-serif;
   min-height: 100dvh;
   margin: 0 auto;
-  background-image: url(/bg.jpg);
+  background-image: url(./assets/images/bg.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
