--- a/style.scss
+++ b/style.scss
@@ -162,6 +162,9 @@
 
       &:nth-child(2) {
         background: #f40301;
+        padding-left: 3vh;
+        font-size: 14px;
+        line-height: 18px;
       }
 
       &:nth-child(3) {
@@ -173,6 +176,9 @@
 
       &:nth-child(4) {
         background: #14b901;
+        padding-left: 3vh;
+        font-size: 14px;
+        line-height: 18px;
       }
 
       &:nth-child(5) {
@@ -184,6 +190,9 @@
       }
       &:nth-child(7) {
         background: #f40301;
+        padding-left: 3vh;
+        font-size: 14px;
+        line-height: 18px;
       }
 
       &:nth-child(8) {
@@ -192,6 +201,9 @@
 
       &:nth-child(9) {
         background: #14b901;
+        padding-left: 3vh;
+        font-size: 14px;
+        line-height: 18px;
       }
 
       &:nth-child(10) {
